tests/ui/suggestions/type-ascription-instead-of-path.rs
fn main() {
    std:io::stdin();
    //~^ ERROR path separator must be a double colon
}
